# hurricane

./: .gitignore  DEPS  README  README.md  hurricane.cabal
Hurricane/: Application.hs  StaticHandler.hs  Web.hs
Hurricane/Internal/: RequestHeaders.hs  ResponseHeaders.hs  Routes.hs  Util.hs
Hurricane/Test/: SimpleStatic.hs  TestRoutes.hs
utils/: apply_license.py  license_header.txt
